Small CSS fixes to make the home screen look ok on smaller smartphones (using my friends iphone 7 for reference). The word/name toshi changes color below a certain height to help with the overlapping colors of toshi and tk

--- a/frontend/src/App/styles/components/_nav.scss
+++ b/frontend/src/App/styles/components/_nav.scss
@@ -27,6 +27,10 @@
       align-items: center;
     }
 
+    @media (max-width: 410px) {
+
+    }
+
     &--item {
       margin: 2rem 0;
       padding: 0.5rem 0;
@@ -47,6 +51,12 @@
 
       @media (max-width: 500px) {
         margin: 0 1rem;
+      }
+      @media (max-width: 410px) {
+        margin: 0 0.5rem;
+      }
+      @media (max-width: 360px) {
+        margin: 0 0.3rem;
       }
     }
   }
